--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block body
 					h2= key
 				ol.events
 					each event in val
-						li.vcard
+						li.vcard(style="border-color:#{event.color}")
 							h3
 								a(href=event.url)= event.title
 								p.who= event.people
