Finishing touches for the add event form

--- a/assets/css/event.less
+++ b/assets/css/event.less
@@ -28,6 +28,13 @@ body.event {
 			border-right: 1px solid #CCC;
 		}
 
+		input.error {
+			border-bottom-color: #FAA;
+			border-right-color: #FAA;
+			border-top-color: #F00;
+			border-left-color: #F00;
+		}
+
 		input:focus {
 			.vertical(#f7f7f7, #DEEEFF);
 
