--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,6 +33,6 @@ html
       block body
 
       footer
-         | for comments or if you see an error, contact 
+         | report errors or abuse to 
          a.unspamify-me ascalonx at gmail dot com
          |  or @dustyburwell
