Change contact info to kansascity2

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,5 +42,5 @@ html
 
       footer
          | report errors or abuse to 
-         a.unspamify-me ascalonx at gmail dot com
-         |  or @dustyburwell
+         a.unspamify-me info at kansascity2 dot com
+         |  or @kansas_city2
