Add link to twitter account

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -47,4 +47,5 @@ html
       footer
          | report errors or abuse to 
          a.unspamify-me info at kansascity2 dot com
-         |  or @kansas_city2
+         |  or 
+         a(href='http://twitter.com/kansas_city2') @kansas_city2 
